--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div> -->
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">Vegetables (भाजी मार्केट) By Nilesh</a>
+	      <a class="navbar-brand" href="index.html">भाजी मार्केट By Nilesh</a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -774,9 +774,8 @@
               <!-- <p>Fresh | Clean | Lowest Rate</p> -->
               <p>ताजे | स्वच्छ | सर्वात कमी किंमत</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+                <li class="ftco-animate"><a href="https://www.facebook.com/nilesh.matre.180"><span class="icon-facebook"></span></a></li>
+                <li class="ftco-animate"><a href="https://instagram.com/nilesh_matre_?igshid=q9868c0vlm1y"><span class="icon-instagram"></span></a></li>
               </ul>
             </div>
           </div>
