--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>निलेश भाजी मार्केट </title>
+    <title>ऑर्डर Online भाजीपाला - तलवाडा</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -52,7 +52,7 @@
     </div> -->
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">निलेश भाजी मार्केट</a>
+	      <a class="navbar-brand" href="index.html">ऑर्डर Online भाजीपाला - तलवाडा</a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -72,7 +72,7 @@
             </li> -->
 	          <!-- <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
 	          <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li> -->
-	          <li class="nav-item"><a href="#" class="nav-link" style="font-size: 15px">+917083877757</a></li>
+	          <li class="nav-item"><a href="#" class="nav-link" style="font-size: 15px">निलेश मात्रे :- 7083877757 <br> धनंजय हात्ते :- 9665019143</a></li>
 	          <!-- <li class="nav-item cta cta-colored"><a href="cart.html" class="nav-link"><span class="icon-shopping_cart"></span>[0]</a></li> -->
 
 	        </ul>
@@ -233,12 +233,12 @@
     						<h3><a href="#">टोमॅटो</a></h3>
     						<div class="d-flex">
     							<div class="pricing">
-		    						<p class="price"><span class="price-sale" >₹ १० / किलो</span></p>
+		    						<p class="price"><span class="price-sale" >40 Rs./किलो</span></p>
 		    					</div>
 	    					</div>
 	    					<div class="bottom-area d-flex px-3">
 	    						<div class="m-auto d-flex">
-	    							<p class="price justify-content-center"><span class="price-sale">₹ १० / किलो</span></p>
+	    							<p class="price justify-content-center"><span class="price-sale">40 Rs./किलो</span></p>
 	    							<!-- <a href="#" class="add-to-cart d-flex justify-content-center align-items-center text-center">
 	    								<span><i class="ion-ios-menu"></i></span>
 	    							</a>
@@ -257,17 +257,18 @@
     				<div class="product">
     					<a href="#" class="img-prod"><img class="img-fluid" src="images/kande.jpg" alt="Colorlib Template">
     						<div class="overlay"></div>
-    					</a>
+ 
+					+</a>
     					<div class="text py-3 pb-4 px-3 text-center">
     						<h3><a href="#">कांदा</a></h3>
     						<div class="d-flex">
     							<div class="pricing">
-		    						<p class="price"><span>₹ १० / किलो</span></p>
+		    						<p class="price"><span>25 Rs./ किलो</span></p>
 		    					</div>
 	    					</div>
     						<div class="bottom-area d-flex px-3">
 	    						<div class="m-auto d-flex">
-	    							<p class="price"><span>₹ १० / किलो</span></p>
+	    							<p class="price"><span>25 Rs./ किलो</span></p>
 	    							<!-- <a href="#" class="add-to-cart d-flex justify-content-center align-items-center text-center">
 	    								<span><i class="ion-ios-menu"></i></span>
 	    							</a>
@@ -291,12 +292,12 @@
     						<h3><a href="#">बटाटा</a></h3>
     						<div class="d-flex">
     							<div class="pricing">
-		    						<p class="price"><span>₹ १० / किलो</span></p>
+		    						<p class="price"><span>40 Rs./ किलो</span></p>
 		    					</div>
 	    					</div>
     						<div class="bottom-area d-flex px-3">
 	    						<div class="m-auto d-flex">
-	    							<p class="price"><span>₹ १० / किलो</span></p>
+	    							<p class="price"><span>40 Rs./ किलो</span></p>
 	    							<!-- <a href="#" class="add-to-cart d-flex justify-content-center align-items-center text-center">
 	    								<span><i class="ion-ios-menu"></i></span>
 	    							</a>
@@ -320,12 +321,12 @@
     						<h3><a href="#">लसूण</a></h3>
     						<div class="d-flex">
     							<div class="pricing">
-		    						<p class="price"><span>₹ १० / किलो</span></p>
+		    						<p class="price"><span>40 Rs. पावशेर</span></p>
 		    					</div>
 	    					</div>
     						<div class="bottom-area d-flex px-3">
 	    						<div class="m-auto d-flex">
-	    							<p class="price"><span>₹ १० / किलो</span></p>
+	    							<p class="price"><span>40 Rs. पावशेर</span></p>
 	    							<!-- <a href="#" class="add-to-cart d-flex justify-content-center align-items-center text-center">
 	    								<span><i class="ion-ios-menu"></i></span>
 	    							</a>
@@ -497,12 +498,12 @@
     						<h3><a href="#">शेपू</a></h3>
     						<div class="d-flex">
     							<div class="pricing">
-		    						<p class="price"><span>₹ १० / किलो</span></p>
+		    						<p class="price"><span>10 Rs. पावशेर</span></p>
 		    					</div>
 	    					</div>
     						<div class="bottom-area d-flex px-3">
 	    						<div class="m-auto d-flex">
-	    							<p class="price"><span>₹ १० / किलो</span></p>
+	    							<p class="price"><span>10 Rs. पावशेर</span></p>
 	    							<!-- <a href="#" class="add-to-cart d-flex justify-content-center align-items-center text-center">
 	    								<span><i class="ion-ios-menu"></i></span>
 	    							</a>
@@ -552,7 +553,239 @@
     						<div class="overlay"></div>
     					</a>
     					<div class="text py-3 pb-4 px-3 text-center">
-    						<h3><a href="#">कढीपत्ता</a></h3>
+    						<h3><a href="#">कोथिंबीर</a></h3>
+    						<div class="d-flex">
+    							<div class="pricing">
+		    						<p class="price"><span>₹ १० / किलो</span></p>
+		    					</div>
+	    					</div>
+    						<div class="bottom-area d-flex px-3">
+	    						<div class="m-auto d-flex">
+	    							<p class="price"><span>₹ १० / किलो</span></p>
+	    							<!-- <a href="#" class="add-to-cart d-flex justify-content-center align-items-center text-center">
+	    								<span><i class="ion-ios-menu"></i></span>
+	    							</a>
+	    							<a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1">
+	    								<span><i class="ion-ios-cart"></i></span>
+	    							</a>
+	    							<a href="#" class="heart d-flex justify-content-center align-items-center ">
+	    								<span><i class="ion-ios-heart"></i></span>
+	    							</a> -->
+    							</div>
+    						</div>
+    					</div>
+    				</div>
+    			</div>
+			<div class="col-md-6 col-lg-3 ftco-animate">
+    				<div class="product">
+    					<a href="#" class="img-prod"><img class="img-fluid" src="images/kadipata.jpg" alt="Colorlib Template">
+    						<div class="overlay"></div>
+    					</a>
+    					<div class="text py-3 pb-4 px-3 text-center">
+    						<h3><a href="#">कोथिंबीर</a></h3>
+    						<div class="d-flex">
+    							<div class="pricing">
+		    						<p class="price"><span>₹ १० / किलो</span></p>
+		    					</div>
+	    					</div>
+    						<div class="bottom-area d-flex px-3">
+	    						<div class="m-auto d-flex">
+	    							<p class="price"><span>₹ १० / किलो</span></p>
+	    							<!-- <a href="#" class="add-to-cart d-flex justify-content-center align-items-center text-center">
+	    								<span><i class="ion-ios-menu"></i></span>
+	    							</a>
+	    							<a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1">
+	    								<span><i class="ion-ios-cart"></i></span>
+	    							</a>
+	    							<a href="#" class="heart d-flex justify-content-center align-items-center ">
+	    								<span><i class="ion-ios-heart"></i></span>
+	    							</a> -->
+    							</div>
+    						</div>
+    					</div>
+    				</div>
+    			</div>
+			<div class="col-md-6 col-lg-3 ftco-animate">
+    				<div class="product">
+    					<a href="#" class="img-prod"><img class="img-fluid" src="images/kadipata.jpg" alt="Colorlib Template">
+    						<div class="overlay"></div>
+    					</a>
+    					<div class="text py-3 pb-4 px-3 text-center">
+    						<h3><a href="#">कोथिंबीर</a></h3>
+    						<div class="d-flex">
+    							<div class="pricing">
+		    						<p class="price"><span>₹ १० / किलो</span></p>
+		    					</div>
+	    					</div>
+    						<div class="bottom-area d-flex px-3">
+	    						<div class="m-auto d-flex">
+	    							<p class="price"><span>₹ १० / किलो</span></p>
+	    							<!-- <a href="#" class="add-to-cart d-flex justify-content-center align-items-center text-center">
+	    								<span><i class="ion-ios-menu"></i></span>
+	    							</a>
+	    							<a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1">
+	    								<span><i class="ion-ios-cart"></i></span>
+	    							</a>
+	    							<a href="#" class="heart d-flex justify-content-center align-items-center ">
+	    								<span><i class="ion-ios-heart"></i></span>
+	    							</a> -->
+    							</div>
+    						</div>
+    					</div>
+    				</div>
+    			</div>
+			<div class="col-md-6 col-lg-3 ftco-animate">
+    				<div class="product">
+    					<a href="#" class="img-prod"><img class="img-fluid" src="images/kadipata.jpg" alt="Colorlib Template">
+    						<div class="overlay"></div>
+    					</a>
+    					<div class="text py-3 pb-4 px-3 text-center">
+    						<h3><a href="#">कोथिंबीर</a></h3>
+    						<div class="d-flex">
+    							<div class="pricing">
+		    						<p class="price"><span>₹ १० / किलो</span></p>
+		    					</div>
+	    					</div>
+    						<div class="bottom-area d-flex px-3">
+	    						<div class="m-auto d-flex">
+	    							<p class="price"><span>₹ १० / किलो</span></p>
+	    							<!-- <a href="#" class="add-to-cart d-flex justify-content-center align-items-center text-center">
+	    								<span><i class="ion-ios-menu"></i></span>
+	    							</a>
+	    							<a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1">
+	    								<span><i class="ion-ios-cart"></i></span>
+	    							</a>
+	    							<a href="#" class="heart d-flex justify-content-center align-items-center ">
+	    								<span><i class="ion-ios-heart"></i></span>
+	    							</a> -->
+    							</div>
+    						</div>
+    					</div>
+    				</div>
+    			</div>
+			<div class="col-md-6 col-lg-3 ftco-animate">
+    				<div class="product">
+    					<a href="#" class="img-prod"><img class="img-fluid" src="images/kadipata.jpg" alt="Colorlib Template">
+    						<div class="overlay"></div>
+    					</a>
+    					<div class="text py-3 pb-4 px-3 text-center">
+    						<h3><a href="#">कोथिंबीर</a></h3>
+    						<div class="d-flex">
+    							<div class="pricing">
+		    						<p class="price"><span>₹ १० / किलो</span></p>
+		    					</div>
+	    					</div>
+    						<div class="bottom-area d-flex px-3">
+	    						<div class="m-auto d-flex">
+	    							<p class="price"><span>₹ १० / किलो</span></p>
+	    							<!-- <a href="#" class="add-to-cart d-flex justify-content-center align-items-center text-center">
+	    								<span><i class="ion-ios-menu"></i></span>
+	    							</a>
+	    							<a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1">
+	    								<span><i class="ion-ios-cart"></i></span>
+	    							</a>
+	    							<a href="#" class="heart d-flex justify-content-center align-items-center ">
+	    								<span><i class="ion-ios-heart"></i></span>
+	    							</a> -->
+    							</div>
+    						</div>
+    					</div>
+    				</div>
+    			</div>
+			<div class="col-md-6 col-lg-3 ftco-animate">
+    				<div class="product">
+    					<a href="#" class="img-prod"><img class="img-fluid" src="images/kadipata.jpg" alt="Colorlib Template">
+    						<div class="overlay"></div>
+    					</a>
+    					<div class="text py-3 pb-4 px-3 text-center">
+    						<h3><a href="#">कोथिंबीर</a></h3>
+    						<div class="d-flex">
+    							<div class="pricing">
+		    						<p class="price"><span>₹ १० / किलो</span></p>
+		    					</div>
+	    					</div>
+    						<div class="bottom-area d-flex px-3">
+	    						<div class="m-auto d-flex">
+	    							<p class="price"><span>₹ १० / किलो</span></p>
+	    							<!-- <a href="#" class="add-to-cart d-flex justify-content-center align-items-center text-center">
+	    								<span><i class="ion-ios-menu"></i></span>
+	    							</a>
+	    							<a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1">
+	    								<span><i class="ion-ios-cart"></i></span>
+	    							</a>
+	    							<a href="#" class="heart d-flex justify-content-center align-items-center ">
+	    								<span><i class="ion-ios-heart"></i></span>
+	    							</a> -->
+    							</div>
+    						</div>
+    					</div>
+    				</div>
+    			</div>
+			<div class="col-md-6 col-lg-3 ftco-animate">
+    				<div class="product">
+    					<a href="#" class="img-prod"><img class="img-fluid" src="images/kadipata.jpg" alt="Colorlib Template">
+    						<div class="overlay"></div>
+    					</a>
+    					<div class="text py-3 pb-4 px-3 text-center">
+    						<h3><a href="#">कोथिंबीर</a></h3>
+    						<div class="d-flex">
+    							<div class="pricing">
+		    						<p class="price"><span>₹ १० / किलो</span></p>
+		    					</div>
+	    					</div>
+    						<div class="bottom-area d-flex px-3">
+	    						<div class="m-auto d-flex">
+	    							<p class="price"><span>₹ १० / किलो</span></p>
+	    							<!-- <a href="#" class="add-to-cart d-flex justify-content-center align-items-center text-center">
+	    								<span><i class="ion-ios-menu"></i></span>
+	    							</a>
+	    							<a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1">
+	    								<span><i class="ion-ios-cart"></i></span>
+	    							</a>
+	    							<a href="#" class="heart d-flex justify-content-center align-items-center ">
+	    								<span><i class="ion-ios-heart"></i></span>
+	    							</a> -->
+    							</div>
+    						</div>
+    					</div>
+    				</div>
+    			</div>
+			<div class="col-md-6 col-lg-3 ftco-animate">
+    				<div class="product">
+    					<a href="#" class="img-prod"><img class="img-fluid" src="images/kadipata.jpg" alt="Colorlib Template">
+    						<div class="overlay"></div>
+    					</a>
+    					<div class="text py-3 pb-4 px-3 text-center">
+    						<h3><a href="#">कोथिंबीर</a></h3>
+    						<div class="d-flex">
+    							<div class="pricing">
+		    						<p class="price"><span>₹ १० / किलो</span></p>
+		    					</div>
+	    					</div>
+    						<div class="bottom-area d-flex px-3">
+	    						<div class="m-auto d-flex">
+	    							<p class="price"><span>₹ १० / किलो</span></p>
+	    							<!-- <a href="#" class="add-to-cart d-flex justify-content-center align-items-center text-center">
+	    								<span><i class="ion-ios-menu"></i></span>
+	    							</a>
+	    							<a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1">
+	    								<span><i class="ion-ios-cart"></i></span>
+	    							</a>
+	    							<a href="#" class="heart d-flex justify-content-center align-items-center ">
+	    								<span><i class="ion-ios-heart"></i></span>
+	    							</a> -->
+    							</div>
+    						</div>
+    					</div>
+    				</div>
+    			</div>
+			<div class="col-md-6 col-lg-3 ftco-animate">
+    				<div class="product">
+    					<a href="#" class="img-prod"><img class="img-fluid" src="images/kadipata.jpg" alt="Colorlib Template">
+    						<div class="overlay"></div>
+    					</a>
+    					<div class="text py-3 pb-4 px-3 text-center">
+    						<h3><a href="#">कोथिंबीर</a></h3>
     						<div class="d-flex">
     							<div class="pricing">
 		    						<p class="price"><span>₹ १० / किलो</span></p>
@@ -584,12 +817,12 @@
     						<h3><a href="#">अदरक</a></h3>
     						<div class="d-flex">
     							<div class="pricing">
-		    						<p class="price"><span>₹ १० / किलो</span></p>
+		    						<p class="price"><span>30 ₹ पावशेर</span></p>
 		    					</div>
 	    					</div>
     						<div class="bottom-area d-flex px-3">
 	    						<div class="m-auto d-flex">
-	    							<p class="price"><span>₹ १० / किलो</span></p>
+	    							<p class="price"><span>30 ₹ पावशेर</span></p>
 	    							<!-- <a href="#" class="add-to-cart d-flex justify-content-center align-items-center text-center">
 	    								<span><i class="ion-ios-menu"></i></span>
 	    							</a>
@@ -809,7 +1042,7 @@
           </div> -->
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-            	<h2 class="ftco-heading-2">भाजी खरेदी करण्यासाठी मला कॉल करा.</h2>
+            	<h2 class="ftco-heading-2">घरपोच भाजीपाला मिळवण्यासाठी खालील नं. वर call किंवा message करा.</h2>
             	<div class="block-23 mb-3">
 	              <ul>
 	                <li><span class="icon icon-map-marker"></span><span class="text">भाजी मार्केट तलवाडा - Vegetable Market Talwada</span></li>
