--- a/index.html
+++ b/index.html
@@ -527,12 +527,12 @@
     						<h3><a href="#">मेथी</a></h3>
     						<div class="d-flex">
     							<div class="pricing">
-		    						<p class="price"><span>₹ १० / किलो</span></p>
+		    						<p class="price"><span>20 ला 3 जुड्या</span></p>
 		    					</div>
 	    					</div>
     						<div class="bottom-area d-flex px-3">
 	    						<div class="m-auto d-flex">
-	    							<p class="price"><span>₹ १० / किलो</span></p>
+	    							<p class="price"><span>20 ला 3 जुड्या</span></p>
 	    							<!-- <a href="#" class="add-to-cart d-flex justify-content-center align-items-center text-center">
 	    								<span><i class="ion-ios-menu"></i></span>
 	    							</a>
@@ -556,12 +556,12 @@
     						<h3><a href="#">कोथिंबीर</a></h3>
     						<div class="d-flex">
     							<div class="pricing">
-		    						<p class="price"><span>₹ १० / किलो</span></p>
+		    						<p class="price"><span>5 ला जुडी</span></p>
 		    					</div>
 	    					</div>
     						<div class="bottom-area d-flex px-3">
 	    						<div class="m-auto d-flex">
-	    							<p class="price"><span>₹ १० / किलो</span></p>
+	    							<p class="price"><span>5 ला जुडी</span></p>
 	    							<!-- <a href="#" class="add-to-cart d-flex justify-content-center align-items-center text-center">
 	    								<span><i class="ion-ios-menu"></i></span>
 	    							</a>
@@ -582,15 +582,15 @@
     						<div class="overlay"></div>
     					</a>
     					<div class="text py-3 pb-4 px-3 text-center">
-    						<h3><a href="#">कोथिंबीर</a></h3>
+    						<h3><a href="#">दोडका</a></h3>
     						<div class="d-flex">
     							<div class="pricing">
-		    						<p class="price"><span>₹ १० / किलो</span></p>
+		    						<p class="price"><span>15 Rs. पावशेर</span></p>
 		    					</div>
 	    					</div>
     						<div class="bottom-area d-flex px-3">
 	    						<div class="m-auto d-flex">
-	    							<p class="price"><span>₹ १० / किलो</span></p>
+	    							<p class="price"><span>15 Rs. पावशेर</span></p>
 	    							<!-- <a href="#" class="add-to-cart d-flex justify-content-center align-items-center text-center">
 	    								<span><i class="ion-ios-menu"></i></span>
 	    							</a>
@@ -611,15 +611,15 @@
     						<div class="overlay"></div>
     					</a>
     					<div class="text py-3 pb-4 px-3 text-center">
-    						<h3><a href="#">कोथिंबीर</a></h3>
+    						<h3><a href="#">काकडी</a></h3>
     						<div class="d-flex">
     							<div class="pricing">
-		    						<p class="price"><span>₹ १० / किलो</span></p>
+		    						<p class="price"><span>00</span></p>
 		    					</div>
 	    					</div>
     						<div class="bottom-area d-flex px-3">
 	    						<div class="m-auto d-flex">
-	    							<p class="price"><span>₹ १० / किलो</span></p>
+	    							<p class="price"><span>00</span></p>
 	    							<!-- <a href="#" class="add-to-cart d-flex justify-content-center align-items-center text-center">
 	    								<span><i class="ion-ios-menu"></i></span>
 	    							</a>
@@ -640,15 +640,15 @@
     						<div class="overlay"></div>
     					</a>
     					<div class="text py-3 pb-4 px-3 text-center">
-    						<h3><a href="#">कोथिंबीर</a></h3>
+    						<h3><a href="#">रताळे</a></h3>
     						<div class="d-flex">
     							<div class="pricing">
-		    						<p class="price"><span>₹ १० / किलो</span></p>
+		    						<p class="price"><span>00</span></p>
 		    					</div>
 	    					</div>
     						<div class="bottom-area d-flex px-3">
 	    						<div class="m-auto d-flex">
-	    							<p class="price"><span>₹ १० / किलो</span></p>
+	    							<p class="price"><span>00</span></p>
 	    							<!-- <a href="#" class="add-to-cart d-flex justify-content-center align-items-center text-center">
 	    								<span><i class="ion-ios-menu"></i></span>
 	    							</a>
@@ -669,15 +669,15 @@
     						<div class="overlay"></div>
     					</a>
     					<div class="text py-3 pb-4 px-3 text-center">
-    						<h3><a href="#">कोथिंबीर</a></h3>
+    						<h3><a href="#">शेवगा</a></h3>
     						<div class="d-flex">
     							<div class="pricing">
-		    						<p class="price"><span>₹ १० / किलो</span></p>
+		    						<p class="price"><span>00</span></p>
 		    					</div>
 	    					</div>
     						<div class="bottom-area d-flex px-3">
 	    						<div class="m-auto d-flex">
-	    							<p class="price"><span>₹ १० / किलो</span></p>
+	    							<p class="price"><span>00</span></p>
 	    							<!-- <a href="#" class="add-to-cart d-flex justify-content-center align-items-center text-center">
 	    								<span><i class="ion-ios-menu"></i></span>
 	    							</a>
@@ -698,15 +698,15 @@
     						<div class="overlay"></div>
     					</a>
     					<div class="text py-3 pb-4 px-3 text-center">
-    						<h3><a href="#">कोथिंबीर</a></h3>
+    						<h3><a href="#">गवार</a></h3>
     						<div class="d-flex">
     							<div class="pricing">
-		    						<p class="price"><span>₹ १० / किलो</span></p>
+		    						<p class="price"><span>00</span></p>
 		    					</div>
 	    					</div>
     						<div class="bottom-area d-flex px-3">
 	    						<div class="m-auto d-flex">
-	    							<p class="price"><span>₹ १० / किलो</span></p>
+	    							<p class="price"><span>00</span></p>
 	    							<!-- <a href="#" class="add-to-cart d-flex justify-content-center align-items-center text-center">
 	    								<span><i class="ion-ios-menu"></i></span>
 	    							</a>
@@ -727,15 +727,15 @@
     						<div class="overlay"></div>
     					</a>
     					<div class="text py-3 pb-4 px-3 text-center">
-    						<h3><a href="#">कोथिंबीर</a></h3>
+    						<h3><a href="#">शिमला मिरची</a></h3>
     						<div class="d-flex">
     							<div class="pricing">
-		    						<p class="price"><span>₹ १० / किलो</span></p>
+		    						<p class="price"><span>15 Rs. पावशेर</span></p>
 		    					</div>
 	    					</div>
     						<div class="bottom-area d-flex px-3">
 	    						<div class="m-auto d-flex">
-	    							<p class="price"><span>₹ १० / किलो</span></p>
+	    							<p class="price"><span>15 Rs. पावशेर</span></p>
 	    							<!-- <a href="#" class="add-to-cart d-flex justify-content-center align-items-center text-center">
 	    								<span><i class="ion-ios-menu"></i></span>
 	    							</a>
@@ -756,15 +756,15 @@
     						<div class="overlay"></div>
     					</a>
     					<div class="text py-3 pb-4 px-3 text-center">
-    						<h3><a href="#">कोथिंबीर</a></h3>
+    						<h3><a href="#">कडीपत्ता</a></h3>
     						<div class="d-flex">
     							<div class="pricing">
-		    						<p class="price"><span>₹ १० / किलो</span></p>
+		    						<p class="price"><span>00</span></p>
 		    					</div>
 	    					</div>
     						<div class="bottom-area d-flex px-3">
 	    						<div class="m-auto d-flex">
-	    							<p class="price"><span>₹ १० / किलो</span></p>
+	    							<p class="price"><span>00</span></p>
 	    							<!-- <a href="#" class="add-to-cart d-flex justify-content-center align-items-center text-center">
 	    								<span><i class="ion-ios-menu"></i></span>
 	    							</a>
@@ -785,15 +785,15 @@
     						<div class="overlay"></div>
     					</a>
     					<div class="text py-3 pb-4 px-3 text-center">
-    						<h3><a href="#">कोथिंबीर</a></h3>
+    						<h3><a href="#">लिंबू</a></h3>
     						<div class="d-flex">
     							<div class="pricing">
-		    						<p class="price"><span>₹ १० / किलो</span></p>
+		    						<p class="price"><span>00</span></p>
 		    					</div>
 	    					</div>
     						<div class="bottom-area d-flex px-3">
 	    						<div class="m-auto d-flex">
-	    							<p class="price"><span>₹ १० / किलो</span></p>
+	    							<p class="price"><span>00</span></p>
 	    							<!-- <a href="#" class="add-to-cart d-flex justify-content-center align-items-center text-center">
 	    								<span><i class="ion-ios-menu"></i></span>
 	    							</a>
