--- a/index.html
+++ b/index.html
@@ -1046,7 +1046,7 @@
             	<div class="block-23 mb-3">
 	              <ul>
 	                <li><span class="icon icon-map-marker"></span><span class="text">भाजी मार्केट तलवाडा - Vegetable Market Talwada</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+917083877757</span></a></li>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">निलेश मात्रे :- 7083877757 <br> धनंजय हात्ते :- 9665019143</span></a></li>
 	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">nileshmatre8082@gmail.com</span></a></li>
 	              </ul>
 	            </div>
