--- a/index.html
+++ b/index.html
@@ -1045,8 +1045,9 @@
             	<h2 class="ftco-heading-2">घरपोच भाजीपाला मिळवण्यासाठी खालील नं. वर call किंवा message करा.</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">भाजी मार्केट तलवाडा - Vegetable Market Talwada</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">निलेश मात्रे :- 7083877757 <br> धनंजय हात्ते :- 9665019143</span></a></li>
+	                <li><span class="icon icon-map-marker"></span><span class="text">ऑर्डर ONLINE भाजीपाला - तलवाडा</span></li>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">निलेश मात्रे :- 7083877757</span></a></li>
+			<li><a href="#"><span class="icon icon-phone"></span><span class="text">धनंजय हात्ते :- 9665019143</span></a></li>
 	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">nileshmatre8082@gmail.com</span></a></li>
 	              </ul>
 	            </div>
