--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
     			</div>
 			<div class="col-md-6 col-lg-3 ftco-animate">
     				<div class="product">
-    					<a href="#" class="img-prod"><img class="img-fluid" src="images/dodka.jpeg" alt="Colorlib Template">
+    					<a href="#" class="img-prod"><img class="img-fluid" src="images/dodka.jpeg" alt="दोडक">
     						<div class="overlay"></div>
     					</a>
     					<div class="text py-3 pb-4 px-3 text-center">
