--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
+    <script src="prices.js"></script>
   </head>
   <body class="goto-here">
 		<!-- <div class="py-1 bg-primary">
@@ -233,7 +234,7 @@
     						<h3><a href="#">टोमॅटो</a></h3>
     						<div class="d-flex">
     							<div class="pricing">
-		    						<p class="price"><span class="price-sale" >40 Rs./किलो</span></p>
+		    						<p class="price टोमॅटो"><span class="price-sale" >40 Rs./किलो</span></p>
 		    					</div>
 	    					</div>
 	    					<div class="bottom-area d-flex px-3">
